lib_LTLIBRARIES = libui.la #libuin.la

include_HEADERS = \
defs.h \
screen_linux.h \
keyboard_linux.h \
ui.h \
dialog.h \
window.h 

libui_la_SOURCES = \
screen_linux.cc \
keyboard_linux.cc \
ui.cc \
dialog.cc \
window.cc

#libuin_la_SOURCES = \
#screen_ncurses.cc \
#keyboard_ncurses.cc \
#ui.cc \
#dialog.cc \
#window.cc

	